# graphics-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CSharpBindings.csproj  Nodes.csproj  README.md  Scripting.csproj  TankEngine.sln  credits.txt  imgui.ini  premake5.lua  snake_script.cpp  snake_script.hpp  test.scene
3D Renderer/: 3D Renderer.vcxproj  3D Renderer.vcxproj.filters  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp  Shape.cpp  camera.cpp  camera.hpp  credits.txt  file.cpp  file.hpp  framebuffer.cpp  framebuffer.hpp  init.cpp  init.hpp  key_input.hpp  main.cpp  matrix.cpp  shader.cpp  texture.cpp  texture.hpp
3D Renderer/Debug/: vc143.idb
3D Renderer/x64/Debug/: vc143.idb
3D Renderer/x64/Debug/3D Renderer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.read.1.tlog  link.secondary.1.tlog
Application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt  colours.cpp  imgui.ini  shader.vert
Application/Application/Debug/: vc143.idb
Application/Application/Debug/Application.tlog/: Application.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Application/Application/x64/Debug/: Application.exe.recipe  vc143.idb
Application/Debug/: vc143.idb
Application/Debug/3D Renderer.tlog/: 3D Renderer.lastbuildstate
Application/Debug/Application.tlog/: Application.lastbuildstate
Application/TankEngine/Debug/: vc143.idb
Application/TankEngine/Debug/TankEngine.tlog/: CL.command.1.tlog  TankEngine.lastbuildstate
Application/lib/: Engine.lib
Application/src/: Shape.hpp  colours.hpp  editor.cpp  editor.hpp  file.cpp  file.hpp  framebuffer.cpp  framebuffer.hpp  key_input.cpp  key_input.hpp  matrix.cpp  matrix.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  quad_mesh.cpp  quad_mesh.hpp  scene.cpp  scene.hpp  scene_serialisation.cpp  scene_serialisation.hpp  script.cpp  script.hpp  serialisation.cpp  serialisation.hpp  shader.cpp  shader.hpp  shader_source.cpp  shader_source.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  transformation.hpp  uniform.cpp  uniform.hpp  widget.cpp  widget.hpp
Application/src/nodes/: camera.cpp  camera.hpp  cube_map.cpp  cube_map.hpp  directional_light.hpp  hierarchy.cpp  hierarchy.hpp  inspector.cpp  inspector.hpp  light.cpp  light.hpp  light_source.cpp  light_source.hpp  model.cpp  model.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  scene_view.cpp  scene_view.hpp  sprite.cpp  sprite.hpp  textured_node.cpp  textured_node.hpp  ui.cpp  ui.hpp  ui_element.cpp  ui_element.hpp
Application/src/nodes/interfaces/: has_shader.cpp  has_shader.hpp  ioutlined.cpp  ioutlined.hpp  mesh_container.hpp  outlined.cpp  outlined.hpp  shader_container.cpp  shader_container.hpp
Application/src/nodes/models/: cube.cpp  cube.hpp  primitive.cpp  primitive.hpp  sprite.cpp  (+1 more)
Application/src/scripting/: script_engine.cpp  script_engine.hpp
Application/src/shaders/: lightCubeShader.frag  lightCubeShader.vert  screenShader.frag  screenShader.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
Application/src/static/: glm_serialise.cpp  glm_serialise.hpp  time.hpp
Application/x64/Debug/: 3D Renderer.exe.recipe  Application.exe.recipe  Application.vcxproj.FileListAbsolute.txt  TankEngine.exe.recipe  file.obj.enc  model.obj.enc  vc143.idb
DemoProject/scripts/: player.lua  template.lua
Editor/src/: editor.cpp
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: application.cpp  application.hpp  colours.cpp  colours.hpp  core.hpp  editor.cpp  entry_point.hpp  file.cpp  file.hpp  json.hpp  key_input.cpp  key_input.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.hpp  mesh.hpp  script.cpp  script.hpp  serialisation.cpp  serialisation.hpp  shader.cpp  shader.hpp  stb_implementation.cpp  texture.hpp  transform.cpp  transform.hpp  transformation.hpp  widget.hpp
Engine/src/nodes/: camera.cpp  camera.hpp  cube_map.hpp  hierarchy.cpp  hierarchy.hpp  inspector.cpp  inspector.hpp  light.cpp  light.hpp  model.cpp  model.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp
Engine/src/scripting/: script.cpp  script.hpp  script_prop.cpp  script_prop.hpp
Engine/src/static/: glm_serialise.hpp  time.hpp
Player/src/: player.cpp
Tank-ScriptCore/: Tank-ScriptCore.csproj
Tank-ScriptCore/Source/: Main.cs
TankEngine/: hierarchy.hpp  tepch.hpp
TankEngine/data/usertypes/: Node.json  Quat.json  Transform.json  Vec3.json
TankEngine/src/: file.cpp  file.hpp  scene_serialisation.cpp  shader.cpp
TankEngine/src/export/: bundle_builder.cpp
TankEngine/src/nodes/: sprite.hpp
TankEngine/src/scripting/: generate_user_types.cpp  generate_user_types.hpp  script.cpp  script_manager.cpp  user_type_quat.cpp  user_type_vec3.cpp  user_types.cpp  user_types.hpp
TankEngine/src/static/: time.hpp
TankLuaDocs/codegen/: Camera.lua  Quat.lua  Transform.lua
TankPlayer/src/: player.cpp  player.hpp
bin-int/Debug-x64/: Engine.dll.recipe  vc143.idb
bin-int/Debug-x64/Application/: Application.exe.recipe  hierarchy.obj.enc  model.obj.enc  scene_view.obj.enc  vc143.idb
bin-int/Debug-x64/Application.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
bin-int/Debug-x64/Engine/: Engine.dll.recipe  vc143.idb
bin-int/Debug-x64/Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Debug-x64/tengine/: tengine.dll.recipe  vc143.idb
codegen/usertypes/: cpp.py  main.py  metamethods.py  sol.py  tank.py
scripts/: doom.lua  movement.lua  template.lua  test.lua
scripts/tank/: camera.lua  input.lua  transform.lua  vec2.lua  vec3.lua  vec4.lua
shaders/: lightCubeShader.vert  shader.frag
src/: texture.cpp
(+79 files in other folders)
